--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>3.2.5</version>
+        </dependency>
+
+        <!--        <dependency>-->
 <!--            <groupId>extrade.com</groupId>-->
 <!--            <artifactId>extrade-connect-starter</artifactId>-->
 <!--            <version>1.0</version>-->
