--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -10,3 +10,5 @@ Pattern.customerSignupForm.rePassword=Re-type password is not valid
 rePassword.mismatch=Re-Type Password is not matching with Password
 emailAddress.notAvailable=Email Address is already taken
 mobileNo.notAvailable=Mobile Number is already taken
+NotNull.customerSignupForm.dob=Date of Birth is blank
+NotBlank.customerSignupForm.termsAndConditions=Please read and accept the Terms and Conditions
