worked on Home page,when u login ur email will be appeared & when u logout it will be gone

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -12,3 +12,6 @@ emailAddress.notAvailable=Email Address is already taken
 mobileNo.notAvailable=Mobile Number is already taken
 NotNull.customerSignupForm.dob=Date of Birth is blank
 NotBlank.customerSignupForm.termsAndConditions=Please read and accept the Terms and Conditions
+otpCode.mismatch=OTP Number provided is not matching
+otpCode.blank=OTP Number is blank
+otpCode.invalid=OTP Number should be 6 digits in length
