--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   mvc:
     static-path-pattern: /static/**
   messages:
-    basename: errors
+    basename: errors, messages
 
 logging:
   level:
