--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
 logging:
   level:
     root: info
+    org:
+      springframework:
+        security: debug
   logback:
     rollingpolicy:
       file-name-pattern: /var/log/xtrade-web-%d{yyyy-MM-dd}.%i.log
@@ -20,3 +23,7 @@ logging:
 
 userAccountService:
   url: http://localhost:8090
+
+xtrade:
+  default:
+    url: http://localhost:8088
